--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
     </properties>
     <dependencies>
 
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+            </dependency>
+
+
         <!-- JavaFX modules -->
         <dependency>
             <groupId>org.openjfx</groupId>
